@@ -1,6 +1,8 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - fix evaluate() callbacks for keywords that have no
+            runtime-specific actions
 
 0.525     2021-11-17 05:35:24Z
           - minimum Perl version raised to 5.20
